get_library_version(avfilter version.h LIBAVFILTER_VERSION)

set(AVFILTER_HEADERS avfilter.h
    buffersink.h
    buffersrc.h
    version.h
)

set(AVFILTER_SOURCES allfilters.c
    audio.c
    avfilter.c
    avfiltergraph.c
    buffersink.c
    buffersrc.c
    drawutils.c
    fifo.c
    formats.c
    framepool.c
    framequeue.c
    graphdump.c
    graphparser.c
    transform.c
    video.c
)

if (${HAVE_THREADS})
    list(APPEND AVFILTER_SOURCES pthread.c)
endif ()

if (${CONFIG_SCENE_SAD})
    list(APPEND AVFILTER_SOURCES scene_sad.c)
endif ()
if (${CONFIG_ABENCH_FILTER})
    list(APPEND AVFILTER_SOURCES f_bench.c)
endif () 
if (${CONFIG_ACOMPRESSOR_FILTER})
    list(APPEND AVFILTER_SOURCES af_sidechaincompress.c)
endif () 
if (${CONFIG_ACONTRAST_FILTER})
    list(APPEND AVFILTER_SOURCES af_acontrast.c)
endif () 
if (${CONFIG_ACOPY_FILTER})
    list(APPEND AVFILTER_SOURCES af_acopy.c)
endif () 
if (${CONFIG_ACROSSFADE_FILTER})
    list(APPEND AVFILTER_SOURCES af_afade.c)
endif () 
if (${CONFIG_ACROSSOVER_FILTER})
    list(APPEND AVFILTER_SOURCES af_acrossover.c)
endif () 
if (${CONFIG_ACRUSHER_FILTER})
    list(APPEND AVFILTER_SOURCES af_acrusher.c)
endif ()
if (${CONFIG_ACUE_FILTER})
    list(APPEND AVFILTER_SOURCES f_cue.c)
endif ()
if (${CONFIG_ADECLICK_FILTER})
    list(APPEND AVFILTER_SOURCES af_adeclick.c)
endif () 
if (${CONFIG_ADECLIP_FILTER})
    list(APPEND AVFILTER_SOURCES af_adeclick.c)
endif ()
if (${CONFIG_ADELAY_FILTER})
    list(APPEND AVFILTER_SOURCES af_adelay.c)
endif ()
if (${CONFIG_ADENORM_FILTER})
    list(APPEND AVFILTER_SOURCES af_adenorm.c)
endif ()
if (${CONFIG_ADERIVATIVE_FILTER})
    list(APPEND AVFILTER_SOURCES af_aderivative.c)
endif ()
if (${CONFIG_AECHO_FILTER})
    list(APPEND AVFILTER_SOURCES af_aecho.c)
endif () 
if (${CONFIG_AEMPHASIS_FILTER})
    list(APPEND AVFILTER_SOURCES af_aemphasis.c)
endif () 
if (${CONFIG_AEVAL_FILTER})
    list(APPEND AVFILTER_SOURCES aeval.c)
endif () 
if (${CONFIG_AFADE_FILTER})
    list(APPEND AVFILTER_SOURCES af_afade.c)
endif ()
if (${CONFIG_AFFTDN_FILTER})
    list(APPEND AVFILTER_SOURCES af_afftdn.c)
endif ()
if (${CONFIG_AFFTFILT_FILTER})
    list(APPEND AVFILTER_SOURCES af_afftfilt.c)
endif () 
if (${CONFIG_AFIR_FILTER})
    list(APPEND AVFILTER_SOURCES af_afir.c)
endif () 
if (${CONFIG_AFORMAT_FILTER})
    list(APPEND AVFILTER_SOURCES af_aformat.c)
endif ()
if (${CONFIG_AFREQSHIFT_FILTER})
    list(APPEND AVFILTER_SOURCES af_afreqshift.c)
endif ()
if (${CONFIG_AGATE_FILTER})
    list(APPEND AVFILTER_SOURCES af_agate.c)
endif () 
if (${CONFIG_AIIR_FILTER})
    list(APPEND AVFILTER_SOURCES af_aiir.c)
endif () 
if (${CONFIG_AINTERLEAVE_FILTER})
    list(APPEND AVFILTER_SOURCES f_interleave.c)
endif () 
if (${CONFIG_ALIMITER_FILTER})
    list(APPEND AVFILTER_SOURCES af_alimiter.c)
endif () 
if (${CONFIG_ALLPASS_FILTER})
    list(APPEND AVFILTER_SOURCES af_biquads.c)
endif () 
if (${CONFIG_ALOOP_FILTER})
    list(APPEND AVFILTER_SOURCES f_loop.c)
endif () 
if (${CONFIG_AMERGE_FILTER})
    list(APPEND AVFILTER_SOURCES af_amerge.c)
endif () 
if (${CONFIG_AMETADATA_FILTER})
    list(APPEND AVFILTER_SOURCES f_metadata.c)
endif () 
if (${CONFIG_AMIX_FILTER})
    list(APPEND AVFILTER_SOURCES af_amix.c)
endif ()
if (${CONFIG_AMULTIPLY_FILTER})
    list(APPEND AVFILTER_SOURCES af_amultiply.c)
endif ()
if (${CONFIG_ANEQUALIZER_FILTER})
    list(APPEND AVFILTER_SOURCES af_anequalizer.c)
endif ()
if (${CONFIG_ANLMDN_FILTER})
    list(APPEND AVFILTER_SOURCES af_anlmdn.c)
endif ()
if (${CONFIG_ANLMS_FILTER})
    list(APPEND AVFILTER_SOURCES af_anlms.c)
endif ()
if (${CONFIG_ANULL_FILTER})
    list(APPEND AVFILTER_SOURCES af_anull.c)
endif () 
if (${CONFIG_APAD_FILTER})
    list(APPEND AVFILTER_SOURCES af_apad.c)
endif () 
if (${CONFIG_APERMS_FILTER})
    list(APPEND AVFILTER_SOURCES f_perms.c)
endif () 
if (${CONFIG_APHASER_FILTER})
    list(APPEND AVFILTER_SOURCES af_aphaser.c generate_wave_table.c)
endif ()
if (${CONFIG_APHASESHIFT_FILTER})
    list(APPEND AVFILTER_SOURCES af_afreqshift.c)
endif ()
if (${CONFIG_APULSATOR_FILTER})
    list(APPEND AVFILTER_SOURCES af_apulsator.c)
endif () 
if (${CONFIG_AREALTIME_FILTER})
    list(APPEND AVFILTER_SOURCES f_realtime.c)
endif () 
if (${CONFIG_ARESAMPLE_FILTER})
    list(APPEND AVFILTER_SOURCES af_aresample.c)
endif () 
if (${CONFIG_AREVERSE_FILTER})
    list(APPEND AVFILTER_SOURCES f_reverse.c)
endif ()
if (${CONFIG_ARNNDN_FILTER})
    list(APPEND AVFILTER_SOURCES af_arnndn.c)
endif ()
if (${CONFIG_ASELECT_FILTER})
    list(APPEND AVFILTER_SOURCES f_select.c)
endif () 
if (${CONFIG_ASENDCMD_FILTER})
    list(APPEND AVFILTER_SOURCES f_sendcmd.c)
endif () 
if (${CONFIG_ASETNSAMPLES_FILTER})
    list(APPEND AVFILTER_SOURCES af_asetnsamples.c)
endif () 
if (${CONFIG_ASETPTS_FILTER})
    list(APPEND AVFILTER_SOURCES setpts.c)
endif () 
if (${CONFIG_ASETRATE_FILTER})
    list(APPEND AVFILTER_SOURCES af_asetrate.c)
endif () 
if (${CONFIG_ASETTB_FILTER})
    list(APPEND AVFILTER_SOURCES settb.c)
endif () 
if (${CONFIG_ASHOWINFO_FILTER})
    list(APPEND AVFILTER_SOURCES af_ashowinfo.c)
endif () 
if (${CONFIG_ASIDEDATA_FILTER})
    list(APPEND AVFILTER_SOURCES f_sidedata.c)
endif ()
if (${CONFIG_ASOFTCLIP_FILTER})
    list(APPEND AVFILTER_SOURCES af_asoftclip.c)
endif ()
if (${CONFIG_ASPLIT_FILTER})
    list(APPEND AVFILTER_SOURCES split.c)
endif ()
if (${CONFIG_ASR_FILTER})
    list(APPEND AVFILTER_SOURCES af_asr.c)
endif ()
if (${CONFIG_ASTATS_FILTER})
    list(APPEND AVFILTER_SOURCES af_astats.c)
endif ()
if (${CONFIG_ASTREAMSELECT_FILTER})
    list(APPEND AVFILTER_SOURCES f_streamselect.c framesync.c)
endif ()
if (${CONFIG_ASUBBOOST_FILTER})
    list(APPEND AVFILTER_SOURCES f_streamselect.c af_asubboost.c)
endif ()
if (${CONFIG_ASUBCUT_FILTER})
    list(APPEND AVFILTER_SOURCES f_streamselect.c af_asupercut.c)
endif ()
if (${CONFIG_ASUPERCUT_FILTER})
    list(APPEND AVFILTER_SOURCES f_streamselect.c af_asupercut.c)
endif ()
if (${CONFIG_ASUPERPASS_FILTER})
    list(APPEND AVFILTER_SOURCES f_streamselect.c af_asupercut.c)
endif ()
if (${CONFIG_ASUPERSTOP_FILTER})
    list(APPEND AVFILTER_SOURCES f_streamselect.c af_asupercut.c)
endif ()
if (${CONFIG_ATEMPO_FILTER})
    list(APPEND AVFILTER_SOURCES af_atempo.c)
endif () 
if (${CONFIG_ATRIM_FILTER})
    list(APPEND AVFILTER_SOURCES trim.c)
endif () 
if (${CONFIG_AXCORRELATE_FILTER})
    list(APPEND AVFILTER_SOURCES af_axcorrelate.c)
endif ()
if (${CONFIG_AZMQ_FILTER})
    list(APPEND AVFILTER_SOURCES f_zmq.c)
endif ()
if (${CONFIG_BANDPASS_FILTER})
    list(APPEND AVFILTER_SOURCES af_biquads.c)
endif () 
if (${CONFIG_BANDREJECT_FILTER})
    list(APPEND AVFILTER_SOURCES af_biquads.c)
endif () 
if (${CONFIG_BASS_FILTER})
    list(APPEND AVFILTER_SOURCES af_biquads.c)
endif () 
if (${CONFIG_BIQUAD_FILTER})
    list(APPEND AVFILTER_SOURCES af_biquads.c)
endif () 
if (${CONFIG_BS2B_FILTER})
    list(APPEND AVFILTER_SOURCES af_bs2b.c)
endif () 
if (${CONFIG_CHANNELMAP_FILTER})
    list(APPEND AVFILTER_SOURCES af_channelmap.c)
endif () 
if (${CONFIG_CHANNELSPLIT_FILTER})
    list(APPEND AVFILTER_SOURCES af_channelsplit.c)
endif () 
if (${CONFIG_CHORUS_FILTER})
    list(APPEND AVFILTER_SOURCES af_chorus.c generate_wave_table.c)
endif () 
if (${CONFIG_COMPAND_FILTER})
    list(APPEND AVFILTER_SOURCES af_compand.c)
endif () 
if (${CONFIG_COMPENSATIONDELAY_FILTER})
    list(APPEND AVFILTER_SOURCES af_compensationdelay.c)
endif () 
if (${CONFIG_CROSSFEED_FILTER})
    list(APPEND AVFILTER_SOURCES af_crossfeed.c)
endif () 
if (${CONFIG_CRYSTALIZER_FILTER})
    list(APPEND AVFILTER_SOURCES af_crystalizer.c)
endif () 
if (${CONFIG_DCSHIFT_FILTER})
    list(APPEND AVFILTER_SOURCES af_dcshift.c)
endif ()
if (${CONFIG_DEESSER_FILTER})
    list(APPEND AVFILTER_SOURCES af_deesser.c)
endif ()
if (${CONFIG_DRMETER_FILTER})
    list(APPEND AVFILTER_SOURCES af_drmeter.c)
endif ()
if (${CONFIG_DYNAUDNORM_FILTER})
    list(APPEND AVFILTER_SOURCES af_dynaudnorm.c)
endif ()
if (${CONFIG_EARWAX_FILTER})
    list(APPEND AVFILTER_SOURCES af_earwax.c)
endif () 
if (${CONFIG_EBUR128_FILTER})
    list(APPEND AVFILTER_SOURCES f_ebur128.c)
endif () 
if (${CONFIG_EQUALIZER_FILTER})
    list(APPEND AVFILTER_SOURCES af_biquads.c)
endif () 
if (${CONFIG_EXTRASTEREO_FILTER})
    list(APPEND AVFILTER_SOURCES af_extrastereo.c)
endif () 
if (${CONFIG_FIREQUALIZER_FILTER})
    list(APPEND AVFILTER_SOURCES af_firequalizer.c)
endif () 
if (${CONFIG_FLANGER_FILTER})
    list(APPEND AVFILTER_SOURCES af_flanger.c generate_wave_table.c)
endif () 
if (${CONFIG_HAAS_FILTER})
    list(APPEND AVFILTER_SOURCES af_haas.c)
endif () 
if (${CONFIG_HDCD_FILTER})
    list(APPEND AVFILTER_SOURCES af_hdcd.c)
endif () 
if (${CONFIG_HEADPHONE_FILTER})
    list(APPEND AVFILTER_SOURCES af_headphone.c)
endif () 
if (${CONFIG_HIGHPASS_FILTER})
    list(APPEND AVFILTER_SOURCES af_biquads.c)
endif () 
if (${CONFIG_JOIN_FILTER})
    list(APPEND AVFILTER_SOURCES af_join.c)
endif () 
if (${CONFIG_LADSPA_FILTER})
    list(APPEND AVFILTER_SOURCES af_ladspa.c)
endif () 
if (${CONFIG_LOUDNORM_FILTER})
    list(APPEND AVFILTER_SOURCES af_loudnorm.c ebur128.c)
endif () 
if (${CONFIG_LOWPASS_FILTER})
    list(APPEND AVFILTER_SOURCES af_biquads.c)
endif () 
if (${CONFIG_LV2_FILTER})
    list(APPEND AVFILTER_SOURCES af_lv2.c)
endif () 
if (${CONFIG_MCOMPAND_FILTER})
    list(APPEND AVFILTER_SOURCES af_mcompand.c)
endif () 
if (${CONFIG_PAN_FILTER})
    list(APPEND AVFILTER_SOURCES af_pan.c)
endif () 
if (${CONFIG_REPLAYGAIN_FILTER})
    list(APPEND AVFILTER_SOURCES af_replaygain.c)
endif () 
if (${CONFIG_RESAMPLE_FILTER})
    list(APPEND AVFILTER_SOURCES af_resample.c)
endif () 
if (${CONFIG_RUBBERBAND_FILTER})
    list(APPEND AVFILTER_SOURCES af_rubberband.c)
endif () 
if (${CONFIG_SIDECHAINCOMPRESS_FILTER})
    list(APPEND AVFILTER_SOURCES af_sidechaincompress.c)
endif () 
if (${CONFIG_SIDECHAINGATE_FILTER})
    list(APPEND AVFILTER_SOURCES af_agate.c)
endif () 
if (${CONFIG_SILENCEDETECT_FILTER})
    list(APPEND AVFILTER_SOURCES af_silencedetect.c)
endif () 
if (${CONFIG_SILENCEREMOVE_FILTER})
    list(APPEND AVFILTER_SOURCES af_silenceremove.c)
endif () 
if (${CONFIG_SOFALIZER_FILTER})
    list(APPEND AVFILTER_SOURCES af_sofalizer.c)
endif ()
if (${CONFIG_SPEECHNORM_FILTER})
    list(APPEND AVFILTER_SOURCES af_speechnorm.c)
endif ()
if (${CONFIG_STEREOTOOLS_FILTER})
    list(APPEND AVFILTER_SOURCES af_stereotools.c)
endif () 
if (${CONFIG_STEREOWIDEN_FILTER})
    list(APPEND AVFILTER_SOURCES af_stereowiden.c)
endif () 
if (${CONFIG_SUPEREQUALIZER_FILTER})
    list(APPEND AVFILTER_SOURCES af_superequalizer.c)
endif () 
if (${CONFIG_SURROUND_FILTER})
    list(APPEND AVFILTER_SOURCES af_surround.c)
endif () 
if (${CONFIG_TREBLE_FILTER})
    list(APPEND AVFILTER_SOURCES af_biquads.c)
endif () 
if (${CONFIG_TREMOLO_FILTER})
    list(APPEND AVFILTER_SOURCES af_tremolo.c)
endif () 
if (${CONFIG_VIBRATO_FILTER})
    list(APPEND AVFILTER_SOURCES af_vibrato.c generate_wave_table.c)
endif () 
if (${CONFIG_VOLUME_FILTER})
    list(APPEND AVFILTER_SOURCES af_volume.c)
endif () 
if (${CONFIG_VOLUMEDETECT_FILTER})
    list(APPEND AVFILTER_SOURCES af_volumedetect.c
)
endif ()
if (${CONFIG_AEVALSRC_FILTER})
    list(APPEND AVFILTER_SOURCES aeval.c)
endif ()
if (${CONFIG_AFIRSRC_FILTER})
    list(APPEND AVFILTER_SOURCES asrc_afirsrc.c)
endif ()
if (${CONFIG_ANOISESRC_FILTER})
    list(APPEND AVFILTER_SOURCES asrc_anoisesrc.c)
endif () 
if (${CONFIG_ANULLSRC_FILTER})
    list(APPEND AVFILTER_SOURCES asrc_anullsrc.c)
endif () 
if (${CONFIG_FLITE_FILTER})
    list(APPEND AVFILTER_SOURCES asrc_flite.c)
endif () 
if (${CONFIG_HILBERT_FILTER})
    list(APPEND AVFILTER_SOURCES asrc_hilbert.c)
endif ()
if (${CONFIG_SINC_FILTER})
    list(APPEND AVFILTER_SOURCES asrc_sinc.c)
endif ()
if (${CONFIG_SINE_FILTER})
    list(APPEND AVFILTER_SOURCES asrc_sine.c)
endif () 
if (${CONFIG_ANULLSINK_FILTER})
    list(APPEND AVFILTER_SOURCES asink_anullsink.c)
endif ()
if (${CONFIG_ADDROI_FILTER})
    list(APPEND AVFILTER_SOURCES vf_addroi.c)
endif ()
if (${CONFIG_ALPHAEXTRACT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_extractplanes.c)
endif () 
if (${CONFIG_ALPHAMERGE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_alphamerge.c)
endif ()
if (${CONFIG_AMPLIFY_FILTER})
    list(APPEND AVFILTER_SOURCES vf_amplify.c)
endif ()
if (${CONFIG_ASS_FILTER})
    list(APPEND AVFILTER_SOURCES vf_subtitles.c)
endif () 
if (${CONFIG_ATADENOISE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_atadenoise.c)
endif () 
if (${CONFIG_AVGBLUR_FILTER})
    list(APPEND AVFILTER_SOURCES vf_avgblur.c)
endif ()
if (${CONFIG_AVGBLUR_OPENCL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_avgblur_opencl.c opencl.c opencl/avgblur.cl boxblur.c)
endif ()
if (${CONFIG_AVGBLUR_VULKAN_FILTER})
    list(APPEND AVFILTER_SOURCES vf_avgblur_vulkan.c vulkan.c)
endif ()
if (${CONFIG_BBOX_FILTER})
    list(APPEND AVFILTER_SOURCES bbox.c vf_bbox.c)
endif () 
if (${CONFIG_BENCH_FILTER})
    list(APPEND AVFILTER_SOURCES f_bench.c)
endif ()
if (${CONFIG_BILATERAL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_bilateral.c)
endif ()
if (${CONFIG_BITPLANENOISE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_bitplanenoise.c)
endif () 
if (${CONFIG_BLACKDETECT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_blackdetect.c)
endif () 
if (${CONFIG_BLACKFRAME_FILTER})
    list(APPEND AVFILTER_SOURCES vf_blackframe.c)
endif () 
if (${CONFIG_BLEND_FILTER})
    list(APPEND AVFILTER_SOURCES vf_blend.c framesync.c)
endif ()
if (${CONFIG_BM3D_FILTER})
    list(APPEND AVFILTER_SOURCES vf_bm3d.c framesync.c)
endif ()
if (${CONFIG_BOXBLUR_FILTER})
    list(APPEND AVFILTER_SOURCES vf_boxblur.c boxblur.c)
endif ()
if (${CONFIG_BOXBLUR_OPENCL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_avgblur_opencl.c opencl.c opencl/avgblur.cl boxblur.c)
endif () 
if (${CONFIG_BWDIF_FILTER})
    list(APPEND AVFILTER_SOURCES vf_bwdif.c yadif_common.c)
endif ()
if (${CONFIG_CAS_FILTER})
    list(APPEND AVFILTER_SOURCES vf_cas.c)
endif ()
if (${CONFIG_CHROMABER_VULKAN_FILTER})
    list(APPEND AVFILTER_SOURCES vf_chromaber_vulkan.c vulkan.c)
endif () 
if (${CONFIG_CHROMAKEY_FILTER})
    list(APPEND AVFILTER_SOURCES vf_chromakey.c)
endif ()
if (${CONFIG_CHROMANR_FILTER})
    list(APPEND AVFILTER_SOURCES vf_chromanr.c)
endif ()
if (${CONFIG_CHROMASHIFT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_chromashift.c)
endif ()
if (${CONFIG_CIESCOPE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_ciescope.c)
endif () 
if (${CONFIG_CODECVIEW_FILTER})
    list(APPEND AVFILTER_SOURCES vf_codecview.c qp_table.c)
endif () 
if (${CONFIG_COLORBALANCE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_colorbalance.c)
endif () 
if (${CONFIG_COLORCHANNELMIXER_FILTER})
    list(APPEND AVFILTER_SOURCES vf_colorchannelmixer.c)
endif ()
if (${CONFIG_COLORCONTRAST_FILTER})
    list(APPEND AVFILTER_SOURCES vf_colorcontrast.c)
endif ()
if (${CONFIG_COLORKEY_FILTER})
    list(APPEND AVFILTER_SOURCES vf_colorkey.c)
endif ()
if (${CONFIG_COLORKEY_OPENCL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_colorkey_opencl.c opencl.c opencl/colorkey.cl)
endif ()
if (${CONFIG_COLORLEVELS_FILTER})
    list(APPEND AVFILTER_SOURCES vf_colorlevels.c)
endif () 
if (${CONFIG_COLORMATRIX_FILTER})
    list(APPEND AVFILTER_SOURCES vf_colormatrix.c)
endif () 
if (${CONFIG_COLORSPACE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_colorspace.c colorspace.c colorspacedsp.c)
endif ()
if (${CONFIG_COLORTEMPERATURE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_colortemperature.c)
endif ()
if (${CONFIG_CONVOLUTION_FILTER})
    list(APPEND AVFILTER_SOURCES vf_convolution.c)
endif ()
if (${CONFIG_CONVOLUTION_OPENCL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_convolution_opencl.c opencl.c opencl/convolution.cl)
endif ()
if (${CONFIG_CONVOLVE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_convolve.c framesync.c)
endif () 
if (${CONFIG_COPY_FILTER})
    list(APPEND AVFILTER_SOURCES vf_copy.c)
endif () 
if (${CONFIG_COREIMAGE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_coreimage.m)
endif () 
if (${CONFIG_COVER_RECT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_cover_rect.c lavfutils.c)
endif () 
if (${CONFIG_CROP_FILTER})
    list(APPEND AVFILTER_SOURCES vf_crop.c)
endif () 
if (${CONFIG_CROPDETECT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_cropdetect.c)
endif () 
if (${CONFIG_CURVES_FILTER})
    list(APPEND AVFILTER_SOURCES vf_curves.c)
endif () 
if (${CONFIG_DATASCOPE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_datascope.c)
endif ()
if (${CONFIG_DBLUR_FILTER})
    list(APPEND AVFILTER_SOURCES vf_dblur.c)
endif ()
if (${CONFIG_DCTDNOIZ_FILTER})
    list(APPEND AVFILTER_SOURCES vf_dctdnoiz.c)
endif ()
if (${CONFIG_DEBAND_FILTER})
    list(APPEND AVFILTER_SOURCES vf_deband.c)
endif ()
if (${CONFIG_DEBLOCK_FILTER})
    list(APPEND AVFILTER_SOURCES vf_deblock.c)
endif ()
if (${CONFIG_DECIMATE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_decimate.c)
endif ()
if (${CONFIG_DERAIN_FILTER})
    list(APPEND AVFILTER_SOURCES vf_derain.c)
endif ()
if (${CONFIG_DECONVOLVE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_convolve.c framesync.c)
endif ()
if (${CONFIG_DEDOT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_dedot.c)
endif ()
if (${CONFIG_DEFLATE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_neighbor.c)
endif () 
if (${CONFIG_DEFLICKER_FILTER})
    list(APPEND AVFILTER_SOURCES vf_deflicker.c)
endif () 
if (${CONFIG_DEINTERLACE_QSV_FILTER})
    list(APPEND AVFILTER_SOURCES vf_deinterlace_qsv.c)
endif () 
if (${CONFIG_DEINTERLACE_VAAPI_FILTER})
    list(APPEND AVFILTER_SOURCES vf_deinterlace_vaapi.c)
endif () 
if (${CONFIG_DEJUDDER_FILTER})
    list(APPEND AVFILTER_SOURCES vf_dejudder.c)
endif () 
if (${CONFIG_DELOGO_FILTER})
    list(APPEND AVFILTER_SOURCES vf_delogo.c)
endif ()
if (${CONFIG_DENOISE_VAAPI_FILTER})
    list(APPEND AVFILTER_SOURCES vf_misc_vaapi.c vaapi_vpp.c)
endif ()
if (${CONFIG_DESHAKE_OPENCL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_deshake_opencl.c opencl.c opencl/deshake.cl)
endif ()
if (${CONFIG_DESHAKE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_deshake.c)
endif () 
if (${CONFIG_DESPILL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_despill.c)
endif () 
if (${CONFIG_DETELECINE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_detelecine.c)
endif () 
if (${CONFIG_DILATION_FILTER})
    list(APPEND AVFILTER_SOURCES vf_neighbor.c)
endif ()
if (${CONFIG_DILATION_OPENCL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_neighbor_opencl.c opencl.c opencl/neighbor.cl)
endif ()
if (${CONFIG_DISPLACE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_displace.c framesync.c)
endif ()
if (${CONFIG_DNN_PROCESSING_FILTER})
    list(APPEND AVFILTER_SOURCES vf_dnn_processing.c)
endif ()
if (${CONFIG_DOUBLEWEAVE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_weave.c)
endif () 
if (${CONFIG_DRAWBOX_FILTER})
    list(APPEND AVFILTER_SOURCES vf_drawbox.c)
endif () 
if (${CONFIG_DRAWGRAPH_FILTER})
    list(APPEND AVFILTER_SOURCES f_drawgraph.c)
endif () 
if (${CONFIG_DRAWGRID_FILTER})
    list(APPEND AVFILTER_SOURCES vf_drawbox.c)
endif () 
if (${CONFIG_DRAWTEXT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_drawtext.c)
endif () 
if (${CONFIG_EDGEDETECT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_edgedetect.c)
endif () 
if (${CONFIG_ELBG_FILTER})
    list(APPEND AVFILTER_SOURCES vf_elbg.c)
endif () 
if (${CONFIG_ENTROPY_FILTER})
    list(APPEND AVFILTER_SOURCES vf_entropy.c)
endif ()
if (${CONFIG_EPX_FILTER})
    list(APPEND AVFILTER_SOURCES vf_epx.c)
endif ()
if (${CONFIG_EQ_FILTER})
    list(APPEND AVFILTER_SOURCES vf_eq.c)
endif () 
if (${CONFIG_EROSION_FILTER})
    list(APPEND AVFILTER_SOURCES vf_neighbor.c)
endif ()
if (${CONFIG_EROSION_OPENCL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_neighbor_opencl.c opencl.c opencl/neighbor.cl)
endif ()
if (${CONFIG_ESTDIF_FILTER})
    list(APPEND AVFILTER_SOURCES vf_estdif.c)
endif ()
if (${CONFIG_EXTRACTPLANES_FILTER})
    list(APPEND AVFILTER_SOURCES vf_extractplanes.c)
endif () 
if (${CONFIG_FADE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_fade.c)
endif ()
if (${CONFIG_FFTDNOIZ_FILTER})
    list(APPEND AVFILTER_SOURCES vf_fftdnoiz.c)
endif ()
if (${CONFIG_FFTFILT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_fftfilt.c)
endif () 
if (${CONFIG_FIELD_FILTER})
    list(APPEND AVFILTER_SOURCES vf_field.c)
endif () 
if (${CONFIG_FIELDHINT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_fieldhint.c)
endif () 
if (${CONFIG_FIELDMATCH_FILTER})
    list(APPEND AVFILTER_SOURCES vf_fieldmatch.c)
endif () 
if (${CONFIG_FIELDORDER_FILTER})
    list(APPEND AVFILTER_SOURCES vf_fieldorder.c)
endif () 
if (${CONFIG_FILLBORDERS_FILTER})
    list(APPEND AVFILTER_SOURCES vf_fillborders.c)
endif () 
if (${CONFIG_FIND_RECT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_find_rect.c lavfutils.c)
endif () 
if (${CONFIG_FLOODFILL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_floodfill.c)
endif () 
if (${CONFIG_FORMAT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_format.c)
endif () 
if (${CONFIG_FPS_FILTER})
    list(APPEND AVFILTER_SOURCES vf_fps.c)
endif () 
if (${CONFIG_FRAMEPACK_FILTER})
    list(APPEND AVFILTER_SOURCES vf_framepack.c)
endif () 
if (${CONFIG_FRAMERATE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_framerate.c)
endif () 
if (${CONFIG_FRAMESTEP_FILTER})
    list(APPEND AVFILTER_SOURCES vf_framestep.c)
endif ()
if (${CONFIG_FREEZEDETECT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_freezedetect.c)
endif ()
if (${CONFIG_FREEZEFRAMES_FILTER})
    list(APPEND AVFILTER_SOURCES vf_freezeframes.c)
endif ()
if (${CONFIG_FREI0R_FILTER})
    list(APPEND AVFILTER_SOURCES vf_frei0r.c)
endif () 
if (${CONFIG_FSPP_FILTER})
    list(APPEND AVFILTER_SOURCES vf_fspp.c qp_table.c)
endif () 
if (${CONFIG_GBLUR_FILTER})
    list(APPEND AVFILTER_SOURCES vf_gblur.c)
endif () 
if (${CONFIG_GEQ_FILTER})
    list(APPEND AVFILTER_SOURCES vf_geq.c)
endif () 
if (${CONFIG_GRADFUN_FILTER})
    list(APPEND AVFILTER_SOURCES vf_gradfun.c)
endif ()
if (${CONFIG_GRAPHMONITOR_FILTER})
    list(APPEND AVFILTER_SOURCES f_graphmonitor.c)
endif ()
if (${CONFIG_GREYEDGE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_colorconstancy.c)
endif ()
if (${CONFIG_HALDCLUT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_lut3d.c framesync.c)
endif () 
if (${CONFIG_HFLIP_FILTER})
    list(APPEND AVFILTER_SOURCES vf_hflip.c)
endif () 
if (${CONFIG_HISTEQ_FILTER})
    list(APPEND AVFILTER_SOURCES vf_histeq.c)
endif () 
if (${CONFIG_HISTOGRAM_FILTER})
    list(APPEND AVFILTER_SOURCES vf_histogram.c)
endif () 
if (${CONFIG_HQDN3D_FILTER})
    list(APPEND AVFILTER_SOURCES vf_hqdn3d.c)
endif () 
if (${CONFIG_HQX_FILTER})
    list(APPEND AVFILTER_SOURCES vf_hqx.c)
endif () 
if (${CONFIG_HSTACK_FILTER})
    list(APPEND AVFILTER_SOURCES vf_stack.c framesync.c)
endif () 
if (${CONFIG_HUE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_hue.c)
endif () 
if (${CONFIG_HWDOWNLOAD_FILTER})
    list(APPEND AVFILTER_SOURCES vf_hwdownload.c)
endif () 
if (${CONFIG_HWMAP_FILTER})
    list(APPEND AVFILTER_SOURCES vf_hwmap.c)
endif () 
if (${CONFIG_HWUPLOAD_CUDA_FILTER})
    list(APPEND AVFILTER_SOURCES vf_hwupload_cuda.c)
endif () 
if (${CONFIG_HWUPLOAD_FILTER})
    list(APPEND AVFILTER_SOURCES vf_hwupload.c)
endif () 
if (${CONFIG_HYSTERESIS_FILTER})
    list(APPEND AVFILTER_SOURCES vf_hysteresis.c framesync.c)
endif () 
if (${CONFIG_IDET_FILTER})
    list(APPEND AVFILTER_SOURCES vf_idet.c)
endif () 
if (${CONFIG_IL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_il.c)
endif () 
if (${CONFIG_INFLATE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_neighbor.c)
endif () 
if (${CONFIG_INTERLACE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_tinterlace.c)
endif () 
if (${CONFIG_INTERLEAVE_FILTER})
    list(APPEND AVFILTER_SOURCES f_interleave.c)
endif () 
if (${CONFIG_KERNDEINT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_kerndeint.c)
endif ()
if (${CONFIG_LAGFUN_FILTER})
    list(APPEND AVFILTER_SOURCES vf_lagfun.c)
endif ()
if (${CONFIG_LENSCORRECTION_FILTER})
    list(APPEND AVFILTER_SOURCES vf_lenscorrection.c)
endif ()
if (${CONFIG_LENSFUN_FILTER})
    list(APPEND AVFILTER_SOURCES vf_lensfun.c)
endif ()
if (${CONFIG_LIBVMAF_FILTER})
    list(APPEND AVFILTER_SOURCES vf_libvmaf.c framesync.c)
endif () 
if (${CONFIG_LIMITER_FILTER})
    list(APPEND AVFILTER_SOURCES vf_limiter.c)
endif () 
if (${CONFIG_LOOP_FILTER})
    list(APPEND AVFILTER_SOURCES f_loop.c)
endif () 
if (${CONFIG_LUMAKEY_FILTER})
    list(APPEND AVFILTER_SOURCES vf_lumakey.c)
endif () 
if (${CONFIG_LUT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_lut.c)
endif () 
if (${CONFIG_LUT2_FILTER})
    list(APPEND AVFILTER_SOURCES vf_lut2.c framesync.c)
endif () 
if (${CONFIG_LUT3D_FILTER})
    list(APPEND AVFILTER_SOURCES vf_lut3d.c)
endif () 
if (${CONFIG_LUTRGB_FILTER})
    list(APPEND AVFILTER_SOURCES vf_lut.c)
endif () 
if (${CONFIG_LUTYUV_FILTER})
    list(APPEND AVFILTER_SOURCES vf_lut.c)
endif () 
if (${CONFIG_MASKEDCLAMP_FILTER})
    list(APPEND AVFILTER_SOURCES vf_maskedclamp.c framesync.c)
endif ()
if (${CONFIG_MASKEDMAX_FILTER})
    list(APPEND AVFILTER_SOURCES vf_maskedminmax.c framesync.c)
endif ()
if (${CONFIG_MASKEDMERGE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_maskedmerge.c framesync.c)
endif ()
if (${CONFIG_MASKEDTHRESHOLD_FILTER})
    list(APPEND AVFILTER_SOURCES vf_maskedthreshold.c framesync.c)
endif ()
if (${CONFIG_MASKFUN_FILTER})
    list(APPEND AVFILTER_SOURCES vf_maskfun.c)
endif ()
if (${CONFIG_MASKEDMIN_FILTER})
    list(APPEND AVFILTER_SOURCES vf_maskedminmax.c framesync.c)
endif ()
if (${CONFIG_MCDEINT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_mcdeint.c)
endif ()
if (${CONFIG_MEDIAN_FILTER})
    list(APPEND AVFILTER_SOURCES vf_median.c)
endif ()
if (${CONFIG_MERGEPLANES_FILTER})
    list(APPEND AVFILTER_SOURCES vf_mergeplanes.c framesync.c)
endif () 
if (${CONFIG_MESTIMATE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_mestimate.c motion_estimation.c)
endif () 
if (${CONFIG_METADATA_FILTER})
    list(APPEND AVFILTER_SOURCES f_metadata.c)
endif () 
if (${CONFIG_MIDEQUALIZER_FILTER})
    list(APPEND AVFILTER_SOURCES vf_midequalizer.c framesync.c)
endif () 
if (${CONFIG_MINTERPOLATE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_minterpolate.c motion_estimation.c)
endif () 
if (${CONFIG_MIX_FILTER})
    list(APPEND AVFILTER_SOURCES vf_mix.c)
endif () 
if (${CONFIG_MPDECIMATE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_mpdecimate.c)
endif () 
if (${CONFIG_NEGATE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_lut.c)
endif () 
if (${CONFIG_NLMEANS_FILTER})
    list(APPEND AVFILTER_SOURCES vf_nlmeans.c)
endif ()
if (${CONFIG_NLMEANS_OPENCL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_nlmeans_opencl.c opencl.c opencl/nlmeans.cl)
endif ()
if (${CONFIG_NNEDI_FILTER})
    list(APPEND AVFILTER_SOURCES vf_nnedi.c)
endif () 
if (${CONFIG_NOFORMAT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_format.c)
endif () 
if (${CONFIG_NOISE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_noise.c)
endif () 
if (${CONFIG_NORMALIZE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_normalize.c)
endif () 
if (${CONFIG_NULL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_null.c)
endif () 
if (${CONFIG_OCR_FILTER})
    list(APPEND AVFILTER_SOURCES vf_ocr.c)
endif () 
if (${CONFIG_OCV_FILTER})
    list(APPEND AVFILTER_SOURCES vf_libopencv.c)
endif () 
if (${CONFIG_OSCILLOSCOPE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_datascope.c)
endif () 
if (${CONFIG_OVERLAY_FILTER})
    list(APPEND AVFILTER_SOURCES vf_overlay.c framesync.c)
endif ()
if (${CONFIG_OVERLAY_CUDA_FILTER})
    list(APPEND AVFILTER_SOURCES vf_overlay_cuda.c framesync.c vf_overlay_cuda.cu)
endif ()
if (${CONFIG_OVERLAY_OPENCL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_overlay_opencl.c opencl.c framesync.c opencl/overlay.cl)
endif ()
if (${CONFIG_OVERLAY_QSV_FILTER})
    list(APPEND AVFILTER_SOURCES vf_overlay_qsv.c)
endif ()
if (${CONFIG_OVERLAY_VULKAN_FILTER})
    list(APPEND AVFILTER_SOURCES vf_overlay_vulkan.c vulkan.c)
endif ()
if (${CONFIG_OWDENOISE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_owdenoise.c)
endif () 
if (${CONFIG_PAD_FILTER})
    list(APPEND AVFILTER_SOURCES vf_pad.c)
endif ()
if (${CONFIG_PAD_OPENCL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_pad_opencl.c opencl.c opencl/pad.cl)
endif ()
if (${CONFIG_PALETTEGEN_FILTER})
    list(APPEND AVFILTER_SOURCES vf_palettegen.c)
endif () 
if (${CONFIG_PALETTEUSE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_paletteuse.c framesync.c)
endif () 
if (${CONFIG_PERMS_FILTER})
    list(APPEND AVFILTER_SOURCES f_perms.c)
endif () 
if (${CONFIG_PERSPECTIVE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_perspective.c)
endif () 
if (${CONFIG_PHASE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_phase.c)
endif ()
if (${CONFIG_PHOTOSENSITIVITY_FILTER})
    list(APPEND AVFILTER_SOURCES vf_photosensitivity.c)
endif ()
if (${CONFIG_PIXDESCTEST_FILTER})
    list(APPEND AVFILTER_SOURCES vf_pixdesctest.c)
endif ()
if (${CONFIG_PIXSCOPE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_datascope.c)
endif () 
if (${CONFIG_PP_FILTER})
    list(APPEND AVFILTER_SOURCES vf_pp.c qp_table.c)
endif () 
if (${CONFIG_PP7_FILTER})
    list(APPEND AVFILTER_SOURCES vf_pp7.c qp_table.c)
endif () 
if (${CONFIG_PREMULTIPLY_FILTER})
    list(APPEND AVFILTER_SOURCES vf_premultiply.c framesync.c)
endif () 
if (${CONFIG_PREWITT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_convolution.c)
endif ()
if (${CONFIG_PREWITT_OPENCL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_convolution_opencl.c opencl.c opencl/convolution.cl)
endif ()
if (${CONFIG_PROCAMP_VAAPI_FILTER})
    list(APPEND AVFILTER_SOURCES vf_procamp_vaapi.c vaapi_vpp.c)
endif ()
if (${CONFIG_PROGRAM_OPENCL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_program_opencl.c opencl.c framesync.c)
endif ()
if (${CONFIG_PSEUDOCOLOR_FILTER})
    list(APPEND AVFILTER_SOURCES vf_pseudocolor.c)
endif () 
if (${CONFIG_PSNR_FILTER})
    list(APPEND AVFILTER_SOURCES vf_psnr.c framesync.c)
endif () 
if (${CONFIG_PULLUP_FILTER})
    list(APPEND AVFILTER_SOURCES vf_pullup.c)
endif () 
if (${CONFIG_QP_FILTER})
    list(APPEND AVFILTER_SOURCES vf_qp.c)
endif () 
if (${CONFIG_RANDOM_FILTER})
    list(APPEND AVFILTER_SOURCES vf_random.c)
endif () 
if (${CONFIG_READEIA608_FILTER})
    list(APPEND AVFILTER_SOURCES vf_readeia608.c)
endif () 
if (${CONFIG_READVITC_FILTER})
    list(APPEND AVFILTER_SOURCES vf_readvitc.c)
endif () 
if (${CONFIG_REALTIME_FILTER})
    list(APPEND AVFILTER_SOURCES f_realtime.c)
endif () 
if (${CONFIG_REMAP_FILTER})
    list(APPEND AVFILTER_SOURCES vf_remap.c framesync.c)
endif () 
if (${CONFIG_REMOVEGRAIN_FILTER})
    list(APPEND AVFILTER_SOURCES vf_removegrain.c)
endif () 
if (${CONFIG_REMOVELOGO_FILTER})
    list(APPEND AVFILTER_SOURCES bbox.c lswsutils.c lavfutils.c vf_removelogo.c)
endif () 
if (${CONFIG_REPEATFIELDS_FILTER})
    list(APPEND AVFILTER_SOURCES vf_repeatfields.c)
endif () 
if (${CONFIG_REVERSE_FILTER})
    list(APPEND AVFILTER_SOURCES f_reverse.c)
endif () 
if (${CONFIG_ROBERTS_FILTER})
    list(APPEND AVFILTER_SOURCES vf_convolution.c)
endif ()
if (${CONFIG_ROBERTS_OPENCL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_convolution_opencl.c opencl.c opencl/convolution.cl)
endif ()
if (${CONFIG_ROTATE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_rotate.c)
endif () 
if (${CONFIG_SAB_FILTER})
    list(APPEND AVFILTER_SOURCES vf_sab.c)
endif () 
if (${CONFIG_SCALE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_scale.c scale_eval.c)
endif () 
if (${CONFIG_SCALE_NPP_FILTER})
    list(APPEND AVFILTER_SOURCES vf_scale_npp.c scale_eval.c)
endif () 
if (${CONFIG_SCALE_QSV_FILTER})
    list(APPEND AVFILTER_SOURCES vf_scale_qsv.c)
endif () 
if (${CONFIG_SCALE_VAAPI_FILTER})
    list(APPEND AVFILTER_SOURCES vf_scale_vaapi.c scale_eval.c vaapi_vpp.c)
endif ()
if (${CONFIG_SCALE_VULKAN_FILTER})
    list(APPEND AVFILTER_SOURCES vf_scale_vulkan.c vulkan.c)
endif ()
if (${CONFIG_SCALE2REF_FILTER})
    list(APPEND AVFILTER_SOURCES vf_scale.c scale_eval.c)
endif ()
if (${CONFIG_SCDET_FILTER})
    list(APPEND AVFILTER_SOURCES vf_scdet.c)
endif ()
if (${CONFIG_SCROLL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_scroll.c)
endif ()
if (${CONFIG_SELECT_FILTER})
    list(APPEND AVFILTER_SOURCES f_select.c)
endif () 
if (${CONFIG_SELECTIVECOLOR_FILTER})
    list(APPEND AVFILTER_SOURCES vf_selectivecolor.c)
endif () 
if (${CONFIG_SENDCMD_FILTER})
    list(APPEND AVFILTER_SOURCES f_sendcmd.c)
endif () 
if (${CONFIG_SEPARATEFIELDS_FILTER})
    list(APPEND AVFILTER_SOURCES vf_separatefields.c)
endif () 
if (${CONFIG_SETDAR_FILTER})
    list(APPEND AVFILTER_SOURCES vf_aspect.c)
endif () 
if (${CONFIG_SETFIELD_FILTER})
    list(APPEND AVFILTER_SOURCES vf_setparams.c)
endif () 
if (${CONFIG_SETPTS_FILTER})
    list(APPEND AVFILTER_SOURCES setpts.c)
endif () 
if (${CONFIG_SETRANGE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_setparams.c)
endif () 
if (${CONFIG_SETSAR_FILTER})
    list(APPEND AVFILTER_SOURCES vf_aspect.c)
endif () 
if (${CONFIG_SETTB_FILTER})
    list(APPEND AVFILTER_SOURCES settb.c)
endif ()
if (${CONFIG_SHARPNESS_VAAPI_FILTER})
    list(APPEND AVFILTER_SOURCES vf_misc_vaapi.c vaapi_vpp.c)
endif ()
if (${CONFIG_SHEAR_FILTER})
    list(APPEND AVFILTER_SOURCES vf_shear.c)
endif ()
if (${CONFIG_SHOWINFO_FILTER})
    list(APPEND AVFILTER_SOURCES vf_showinfo.c)
endif () 
if (${CONFIG_SHOWPALETTE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_showpalette.c)
endif () 
if (${CONFIG_SHUFFLEFRAMES_FILTER})
    list(APPEND AVFILTER_SOURCES vf_shuffleframes.c)
endif ()
if (${CONFIG_SHUFFLEPIXELS_FILTER})
    list(APPEND AVFILTER_SOURCES vf_shufflepixels.c)
endif ()
if (${CONFIG_SHUFFLEPLANES_FILTER})
    list(APPEND AVFILTER_SOURCES vf_shuffleplanes.c)
endif () 
if (${CONFIG_SIDEDATA_FILTER})
    list(APPEND AVFILTER_SOURCES f_sidedata.c)
endif () 
if (${CONFIG_SIGNALSTATS_FILTER})
    list(APPEND AVFILTER_SOURCES vf_signalstats.c)
endif () 
if (${CONFIG_SIGNATURE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_signature.c)
endif () 
if (${CONFIG_SMARTBLUR_FILTER})
    list(APPEND AVFILTER_SOURCES vf_smartblur.c)
endif () 
if (${CONFIG_SOBEL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_convolution.c)
endif ()
if (${CONFIG_SOBEL_OPENCL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_convolution_opencl.c opencl.c opencl/convolution.cl)
endif ()
if (${CONFIG_SPLIT_FILTER})
    list(APPEND AVFILTER_SOURCES split.c)
endif () 
if (${CONFIG_SPP_FILTER})
    list(APPEND AVFILTER_SOURCES vf_spp.c qp_table.c)
endif ()
if (${CONFIG_SR_FILTER})
    list(APPEND AVFILTER_SOURCES vf_sr.c)
endif ()
if (${CONFIG_SSIM_FILTER})
    list(APPEND AVFILTER_SOURCES vf_ssim.c framesync.c)
endif () 
if (${CONFIG_STEREO3D_FILTER})
    list(APPEND AVFILTER_SOURCES vf_stereo3d.c)
endif () 
if (${CONFIG_STREAMSELECT_FILTER})
    list(APPEND AVFILTER_SOURCES f_streamselect.c framesync.c)
endif () 
if (${CONFIG_SUBTITLES_FILTER})
    list(APPEND AVFILTER_SOURCES vf_subtitles.c)
endif () 
if (${CONFIG_SUPER2XSAI_FILTER})
    list(APPEND AVFILTER_SOURCES vf_super2xsai.c)
endif () 
if (${CONFIG_SWAPRECT_FILTER})
    list(APPEND AVFILTER_SOURCES vf_swaprect.c)
endif () 
if (${CONFIG_SWAPUV_FILTER})
    list(APPEND AVFILTER_SOURCES vf_swapuv.c)
endif () 
if (${CONFIG_TBLEND_FILTER})
    list(APPEND AVFILTER_SOURCES vf_blend.c framesync.c)
endif () 
if (${CONFIG_TELECINE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_telecine.c)
endif () 
if (${CONFIG_THRESHOLD_FILTER})
    list(APPEND AVFILTER_SOURCES vf_threshold.c framesync.c)
endif () 
if (${CONFIG_THUMBNAIL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_thumbnail.c)
endif () 
if (${CONFIG_TILE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_tile.c)
endif () 
if (${CONFIG_TINTERLACE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_tinterlace.c)
endif () 
if (${CONFIG_TLUT2_FILTER})
    list(APPEND AVFILTER_SOURCES vf_lut2.c framesync.c)
endif ()
if (${CONFIG_TMEDIAN_FILTER})
    list(APPEND AVFILTER_SOURCES vf_xmedian.c framesync.c)
endif ()
if (${CONFIG_TMIDEQUALIZER_FILTER})
    list(APPEND AVFILTER_SOURCES vf_tmidequalizer.c)
endif ()
if (${CONFIG_TONEMAP_FILTER})
    list(APPEND AVFILTER_SOURCES vf_tonemap.c colorspace.c)
endif () 
if (${CONFIG_TRANSPOSE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_transpose.c)
endif ()
if (${CONFIG_TONEMAP_OPENCL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_tonemap_opencl.c colorspace.c opencl.c opencl/tonemap.cl opencl/colorspace_common.c)
endif ()
if (${CONFIG_TONEMAP_VAAPI_FILTER})
    list(APPEND AVFILTER_SOURCES vf_tonemap_vaapi.c vaapi_vpp.c)
endif ()
if (${CONFIG_TPAD_FILTER})
    list(APPEND AVFILTER_SOURCES vf_tpad.c)
endif ()
if (${CONFIG_TRANSPOSE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_transpose.c)
endif ()
if (${CONFIG_TRANSPOSE_NPP_FILTER})
    list(APPEND AVFILTER_SOURCES vf_transpose_npp.c)
endif ()
if (${CONFIG_TRANSPOSE_OPENCL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_transpose_opencl.c opencl.c opencl/transpose.cl)
endif ()
if (${CONFIG_TRANSPOSE_VAAPI_FILTER})
    list(APPEND AVFILTER_SOURCES vf_transpose_vaapi.c vaapi_vpp.c)
endif ()
if (${CONFIG_TRIM_FILTER})
    list(APPEND AVFILTER_SOURCES trim.c)
endif () 
if (${CONFIG_UNPREMULTIPLY_FILTER})
    list(APPEND AVFILTER_SOURCES vf_premultiply.c framesync.c)
endif () 
if (${CONFIG_UNSHARP_FILTER})
    list(APPEND AVFILTER_SOURCES vf_unsharp.c)
endif ()
if (${CONFIG_UNTILE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_untile.c)
endif ()
if (${CONFIG_USPP_FILTER})
    list(APPEND AVFILTER_SOURCES vf_uspp.c qp_table.c)
endif ()
if (${CONFIG_V360_FILTER})
    list(APPEND AVFILTER_SOURCES vf_v360.c)
endif ()
if (${CONFIG_VAGUEDENOISER_FILTER})
    list(APPEND AVFILTER_SOURCES vf_vaguedenoiser.c)
endif () 
if (${CONFIG_VECTORSCOPE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_vectorscope.c)
endif () 
if (${CONFIG_VFLIP_FILTER})
    list(APPEND AVFILTER_SOURCES vf_vflip.c)
endif ()
if (${CONFIG_VFRDET_FILTER})
    list(APPEND AVFILTER_SOURCES vf_vfrdet.c)
endif ()
if (${CONFIG_VIBRANCE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_vibrance.c)
endif ()
if (${CONFIG_VIDSTABDETECT_FILTER})
    list(APPEND AVFILTER_SOURCES vidstabutils.c vf_vidstabdetect.c)
endif () 
if (${CONFIG_VIDSTABTRANSFORM_FILTER})
    list(APPEND AVFILTER_SOURCES vidstabutils.c vf_vidstabtransform.c)
endif () 
if (${CONFIG_VIGNETTE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_vignette.c)
endif () 
if (${CONFIG_VMAFMOTION_FILTER})
    list(APPEND AVFILTER_SOURCES vf_vmafmotion.c framesync.c)
endif () 
if (${CONFIG_VPP_QSV_FILTER})
    list(APPEND AVFILTER_SOURCES vf_vpp_qsv.c)
endif () 
if (${CONFIG_VSTACK_FILTER})
    list(APPEND AVFILTER_SOURCES vf_stack.c framesync.c)
endif () 
if (${CONFIG_W3FDIF_FILTER})
    list(APPEND AVFILTER_SOURCES vf_w3fdif.c)
endif () 
if (${CONFIG_WAVEFORM_FILTER})
    list(APPEND AVFILTER_SOURCES vf_waveform.c)
endif () 
if (${CONFIG_WEAVE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_weave.c)
endif () 
if (${CONFIG_XBR_FILTER})
    list(APPEND AVFILTER_SOURCES vf_xbr.c)
endif ()
if (${CONFIG_XFADE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_xfade.c)
endif ()
if (${CONFIG_XFADE_OPENCL_FILTER})
    list(APPEND AVFILTER_SOURCES vf_xfade_opencl.c opencl.c opencl/xfade.cl)
endif ()
if (${CONFIG_XMEDIAN_FILTER})
    list(APPEND AVFILTER_SOURCES vf_xmedian.c framesync.c)
endif ()
if (${CONFIG_YADIF_FILTER})
    list(APPEND AVFILTER_SOURCES vf_yadif.c yadif_common.c)
endif ()
if (${CONFIG_YADIF_CUDA_FILTER})
    list(APPEND AVFILTER_SOURCES vf_yadif_cuda.c vf_yadif_cuda.cu yadif_common.c)
endif ()
if (${CONFIG_YAEPBLUR_FILTER})
    list(APPEND AVFILTER_SOURCES vf_yaepblur.c)
endif ()
if (${CONFIG_ZMQ_FILTER})
    list(APPEND AVFILTER_SOURCES f_zmq.c)
endif () 
if (${CONFIG_ZOOMPAN_FILTER})
    list(APPEND AVFILTER_SOURCES vf_zoompan.c)
endif () 
if (${CONFIG_ZSCALE_FILTER})
    list(APPEND AVFILTER_SOURCES vf_zscale.c)
endif () 
if (${CONFIG_ALLRGB_FILTER})
    list(APPEND AVFILTER_SOURCES vsrc_testsrc.c)
endif () 
if (${CONFIG_ALLYUV_FILTER})
    list(APPEND AVFILTER_SOURCES vsrc_testsrc.c)
endif () 
if (${CONFIG_CELLAUTO_FILTER})
    list(APPEND AVFILTER_SOURCES vsrc_cellauto.c)
endif () 
if (${CONFIG_COLOR_FILTER})
    list(APPEND AVFILTER_SOURCES vsrc_testsrc.c)
endif () 
if (${CONFIG_COREIMAGESRC_FILTER})
    list(APPEND AVFILTER_SOURCES vf_coreimage.m)
endif () 
if (${CONFIG_FREI0R_SRC_FILTER})
    list(APPEND AVFILTER_SOURCES vf_frei0r.c)
endif ()
if (${CONFIG_GRADIENTS_FILTER})
    list(APPEND AVFILTER_SOURCES vsrc_gradients.c)
endif ()
if (${CONFIG_HALDCLUTSRC_FILTER})
    list(APPEND AVFILTER_SOURCES vsrc_testsrc.c)
endif () 
if (${CONFIG_LIFE_FILTER})
    list(APPEND AVFILTER_SOURCES vsrc_life.c)
endif () 
if (${CONFIG_MANDELBROT_FILTER})
    list(APPEND AVFILTER_SOURCES vsrc_mandelbrot.c)
endif () 
if (${CONFIG_MPTESTSRC_FILTER})
    list(APPEND AVFILTER_SOURCES vsrc_mptestsrc.c)
endif () 
if (${CONFIG_NULLSRC_FILTER})
    list(APPEND AVFILTER_SOURCES vsrc_testsrc.c)
endif ()
if (${CONFIG_OPENCLSRC_FILTER})
    list(APPEND AVFILTER_SOURCES vf_program_opencl.c opencl.c)
endif ()
if (${CONFIG_RGBTESTSRC_FILTER})
    list(APPEND AVFILTER_SOURCES vsrc_testsrc.c)
endif ()
if (${CONFIG_SIERPINSKI_FILTER})
    list(APPEND AVFILTER_SOURCES vsrc_sierpinski.c)
endif ()
if (${CONFIG_SMPTEBARS_FILTER})
    list(APPEND AVFILTER_SOURCES vsrc_testsrc.c)
endif () 
if (${CONFIG_SMPTEHDBARS_FILTER})
    list(APPEND AVFILTER_SOURCES vsrc_testsrc.c)
endif () 
if (${CONFIG_TESTSRC_FILTER})
    list(APPEND AVFILTER_SOURCES vsrc_testsrc.c)
endif () 
if (${CONFIG_TESTSRC2_FILTER})
    list(APPEND AVFILTER_SOURCES vsrc_testsrc.c)
endif () 
if (${CONFIG_YUVTESTSRC_FILTER})
    list(APPEND AVFILTER_SOURCES vsrc_testsrc.c)
endif () 
if (${CONFIG_NULLSINK_FILTER})
    list(APPEND AVFILTER_SOURCES vsink_nullsink.c)
endif () 
if (${CONFIG_ABITSCOPE_FILTER})
    list(APPEND AVFILTER_SOURCES avf_abitscope.c)
endif () 
if (${CONFIG_ADRAWGRAPH_FILTER})
    list(APPEND AVFILTER_SOURCES f_drawgraph.c)
endif () 
if (${CONFIG_AHISTOGRAM_FILTER})
    list(APPEND AVFILTER_SOURCES avf_ahistogram.c)
endif ()
if (${CONFIG_AGRAPHMONITOR_FILTER})
    list(APPEND AVFILTER_SOURCES f_graphmonitor.c)
endif ()
if (${CONFIG_APHASEMETER_FILTER})
    list(APPEND AVFILTER_SOURCES avf_aphasemeter.c)
endif () 
if (${CONFIG_AVECTORSCOPE_FILTER})
    list(APPEND AVFILTER_SOURCES avf_avectorscope.c)
endif () 
if (${CONFIG_CONCAT_FILTER})
    list(APPEND AVFILTER_SOURCES avf_concat.c)
endif () 
if (${CONFIG_SHOWCQT_FILTER})
    list(APPEND AVFILTER_SOURCES avf_showcqt.c lswsutils.c lavfutils.c)
endif () 
if (${CONFIG_SHOWFREQS_FILTER})
    list(APPEND AVFILTER_SOURCES avf_showfreqs.c)
endif ()
if (${CONFIG_SHOWSPATIAL_FILTER})
    list(APPEND AVFILTER_SOURCES avf_showspatial.c)
endif ()
if (${CONFIG_SHOWSPECTRUM_FILTER})
    list(APPEND AVFILTER_SOURCES avf_showspectrum.c)
endif ()
if (${CONFIG_SHOWSPECTRUMPIC_FILTER})
    list(APPEND AVFILTER_SOURCES avf_showspectrum.c)
endif () 
if (${CONFIG_SHOWVOLUME_FILTER})
    list(APPEND AVFILTER_SOURCES avf_showvolume.c)
endif () 
if (${CONFIG_SHOWWAVES_FILTER})
    list(APPEND AVFILTER_SOURCES avf_showwaves.c)
endif () 
if (${CONFIG_SHOWWAVESPIC_FILTER})
    list(APPEND AVFILTER_SOURCES avf_showwaves.c)
endif ()
if (${CONFIG_SPECTRUMSYNTH_FILTER})
    list(APPEND AVFILTER_SOURCES vaf_spectrumsynth.c)
endif ()
if (${CONFIG_AMOVIE_FILTER})
    list(APPEND AVFILTER_SOURCES src_movie.c)
endif ()
if (${CONFIG_MOVIE_FILTER})
    list(APPEND AVFILTER_SOURCES src_movie.c)
endif ()

list(FIND TARGET_ARCHITECTURE_NAMES "X86" IS_X86)
if (NOT IS_X86 EQUAL -1)
    add_subdirectory(x86)
endif ()


source_group("Assembly Files" FILES ${AVFILTER_X86_ASSEMBLY_SOURCES})
if (WIN32)
    set_source_files_properties(${AVFILTER_X86_ASSEMBLY_SOURCES} PROPERTIES VS_TOOL_OVERRIDE "NASM")
else ()
    set_source_files_properties(${AVFILTER_X86_ASSEMBLY_SOURCES} PROPERTIES LANGUAGE ASM_NASM)
endif ()
source_group("Source Files\\x86" FILES ${AVFILTER_X86_SOURCES})
add_library(avfilter ${LIBRARY_TYPE} ${AVFILTER_SOURCES} ${AVFILTER_X86_SOURCES} ${AVFILTER_X86_ASSEMBLY_SOURCES} ${AVFILTER_HEADERS} ${GENERATED_CONFIG_HEADERS} ${GENERATED_VERSION_HEADERS})
if (WIN32)
    add_custom_command(TARGET avfilter PRE_BUILD COMMAND if not exist  "$(IntDir)\\x86" mkdir "$(IntDir)\\x86")
endif ()
target_link_libraries(avfilter PUBLIC avutil avcodec avformat avresample postproc swscale)
if (APPLE)
target_link_libraries(avfilter PUBLIC "-framework CoreImage -framework CoreGraphics -framework OpenGL -framework AppKit")
endif ()
target_include_directories(avfilter PRIVATE ${CMAKE_SOURCE_DIR})
target_compile_definitions(avfilter PUBLIC HAVE_AV_CONFIG_H)

set_target_properties(avfilter PROPERTIES PUBLIC_HEADER "${AVFILTER_HEADERS}")
set_target_properties(avfilter PROPERTIES RUNTIME_OUTPUT_NAME "avfilter-${LIBAVFILTER_VERSION}")
install(TARGETS avfilter
    ARCHIVE
    LIBRARY
    PUBLIC_HEADER
        DESTINATION include/libavfilter
    RUNTIME
)
if (WIN32 AND "${LIBRARY_TYPE}" STREQUAL "SHARED")
    install(FILES $<TARGET_PDB_FILE:avfilter> DESTINATION bin OPTIONAL)
endif ()